
	* lib/ruby.cygclass (ruby_install): Pass --prefix to setup.rb install.

	* bin/cygport.in (__prepdoc): Add HISTORY to default_docs.

	* bin/cygport.in (src_prep): 
	Sanity check for origsrc/SRC_DIR before applying PATCH_URIs.

	* data/mirrors (mirror_gentoo): Added.

	* data/mirrors (mirror_rubyforge): Added.

	* data/Makefile.am
	* data/cygport.nanorc:
	nano(1) syntax highlighting rcfile for cygports and cygclasses.

	* bin/cygport.in: Added postinstall command for developers.

	* bin/cygport.in (apply_patch): Fix patchlevel redefinition.

	* lib/Makefile.am
	* lib/apache.cygclass:
	New cygclass for building Apache mod_* modules.

	* lib/qt3.cygclass: Add --enable-auto-import to LDFLAGS.

	* lib/kde3.cygclass (kde3_compile):
	Enable arts by default. Run make apidox when applicable.
	* (kde3_install): Handle alternate split-package naming.

	* data/mirrors (mirror_berlios): Added.

	* lib/ruby.cygclass (ruby_compile, ruby_install):
	Support ruby extensions which use solely rake.

	* bin/cygport.in (gpg_verify): Fix .sig extensions.
	Patch by Eric Blake: http://cygwin.com/ml/cygwin/2007-01/msg00593.html

	* lib/gnome.org.cygclass: Add GNOME SVN_URI.
	* lib/svn.cygclass: Append SVN_BRANCH (defaults to 'trunk') to SVN_URI.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.8 ***

	* CYGWIN-PATCHES/README
	* lib/Makefile.am
	* lib/wxwidgets.cygclass:
	New cygclass for building wxWidgets-dependent packages.

	* autogen.sh: Fix ac-2.60 to 2.61 transition.
	* bin/cygport.in (cygautoreconf): Use datarootdir with ac-2.61 also.
	Prepare for ac-2.62.
	Reported by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00109.html

	* bin/cygport.in (apply_patch): Correct variable names.
	Patch by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00118.html

	* Add .cvsignore files.

	* bin/cygport.in (apply_patch):
	Fix patchlevel for .cygwin.patch, making code more readable as well.
	Reported by Christian Franke: