@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (unpack): Handle .shar files with unshar.
+
 	* lib/ruby.cygclass (ruby_install): Pass --prefix to setup.rb install.
 
 	* bin/cygport.in (__prepdoc): Add HISTORY to default_docs.
